# final-project-js-jessica-sophia-not-javascript

./: README.md  main.py  pyproject.toml
etc/: milestone2.md
src/: Flag.py  PlayerOne.py  PlayerTwo.py  Projectile.py  chinese_food.py  controller.py  customer.py  menu_screen.py  player.py  sample_sprite.py  tips.py  util.py
src/components/: __init__.py  base_component.py  button.py  image.py  invisible_button.py  paragraph.py  textbox.py
src/scenes/: __init__.py  base_scene.py  credits_scene.py  dining_customer_scene.py  dining_empty_scene.py  ending_scene.py  help_scene.py  help_screen.py  kitchen_order_scene.py  kitchen_scene.py  ordering_scene.py  results_scene.py  welcome_scene.py
src/services/: __init__.py  kitchen_service.py  order_service.py  scene_service.py  score_service.py
